增加javafx打包运行笔记